--- a/src/components/App/styles.m.styl
+++ b/src/components/App/styles.m.styl
@@ -6,4 +6,7 @@
   left 0
   width 100vw
   height 100vh
+  display flex
+  stretch('font-size', 12, 16)
+  overflow hidden
   background $background-light
