--- a/src/components/Navbar/styles.m.styl
+++ b/src/components/Navbar/styles.m.styl
@@ -1,10 +1,10 @@
 @import '../../common.styl'
 
 .navbar
-    height 100%
-    width 84px
-    background white
-    // padding-top 84px
+  height 100%
+  width 84px
+  background white
+  // padding-top 84px
 
 .logo
     height 84px
@@ -54,3 +54,18 @@
             right 0
             top calc((100% - 48px) / 2)
             border-radius 1px
+@media screen and (max-width: $bp3)
+  .navbar
+    width 64px
+  .logo 
+    height 64px
+    width 64px
+  .element
+    height 44px
+    .iconWrapper
+        width 36px
+        height 36px
+    &.active::after
+        height 36px
+        top calc((100% - 36px) / 2)    
+        
