--- a/src/components/Tag/styles.m.styl
+++ b/src/components/Tag/styles.m.styl
@@ -6,7 +6,7 @@
     border-radius 8px
     background $primary
     color white
-    font-size 14px
+    stretch('font-size', 12, 16)
     display flex
     justify-content center
     align-items center
